--- a/CustomAlterVIew/CustomAlterVIew/Base.lproj/Main.storyboard
+++ b/CustomAlterVIew/CustomAlterVIew/Base.lproj/Main.storyboard
@@ -22,19 +22,49 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="aJr-ue-hK7"/>
                                 </constraints>
-                                <state key="normal" title="点击">
+                                <state key="normal" title="CilckCerterAlterView">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="CustomAlterVIewAction:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="koU-f9-qMU"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NgI-dB-2w7">
+                                <rect key="frame" x="43" y="252" width="515" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="809-AB-2EY"/>
+                                </constraints>
+                                <state key="normal" title="CilckBottomAlterView">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="ActionSheet:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="lHz-AH-LvQ"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yD5-Y2-fM5">
+                                <rect key="frame" x="43" y="305" width="496" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="5EZ-F3-C5a"/>
+                                </constraints>
+                                <state key="normal" title="clickBttonActionSheet">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="clickActionsheet:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="EYZ-09-Fe6"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="yD5-Y2-fM5" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="27" id="EdA-SW-Ts4"/>
+                            <constraint firstItem="NgI-dB-2w7" firstAttribute="top" secondItem="8KF-eg-R7h" secondAttribute="bottom" constant="27" id="EfH-Ww-cHh"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="NgI-dB-2w7" secondAttribute="trailing" constant="26" id="FdT-aw-hJV"/>
                             <constraint firstItem="8KF-eg-R7h" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="18" id="Kls-qL-0dI"/>
                             <constraint firstItem="8KF-eg-R7h" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="175" id="SOF-Th-Pqf"/>
                             <constraint firstAttribute="trailingMargin" secondItem="8KF-eg-R7h" secondAttribute="trailing" constant="45" id="TOF-wo-oxF"/>
+                            <constraint firstItem="yD5-Y2-fM5" firstAttribute="top" secondItem="NgI-dB-2w7" secondAttribute="bottom" constant="23" id="XEa-7b-VrN"/>
+                            <constraint firstItem="NgI-dB-2w7" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" constant="27" id="YHL-nY-PXH"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="yD5-Y2-fM5" secondAttribute="trailing" constant="45" id="ola-6o-Sg3"/>
                         </constraints>
                     </view>
                 </viewController>
